--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/ShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/ShoppingCart.cshtml
@@ -55,8 +55,7 @@
                 @Html.SmartLabelFor(model => model.DisplayCartAfterAddingProduct)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.DisplayCartAfterAddingProduct, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.DisplayCartAfterAddingProduct)
+                @Html.SettingEditorFor(model => model.DisplayCartAfterAddingProduct)
                 @Html.ValidationMessageFor(model => model.DisplayCartAfterAddingProduct)
             </td>
         </tr>
@@ -65,8 +64,7 @@
                 @Html.SmartLabelFor(model => model.DisplayWishlistAfterAddingProduct)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.DisplayWishlistAfterAddingProduct, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.DisplayWishlistAfterAddingProduct)
+                @Html.SettingEditorFor(model => model.DisplayWishlistAfterAddingProduct)
                 @Html.ValidationMessageFor(model => model.DisplayWishlistAfterAddingProduct)
             </td>
         </tr>
@@ -75,8 +73,7 @@
                 @Html.SmartLabelFor(model => model.AllowOutOfStockItemsToBeAddedToWishlist)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.AllowOutOfStockItemsToBeAddedToWishlist, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.AllowOutOfStockItemsToBeAddedToWishlist)
+                @Html.SettingEditorFor(model => model.AllowOutOfStockItemsToBeAddedToWishlist)
                 @Html.ValidationMessageFor(model => model.AllowOutOfStockItemsToBeAddedToWishlist)
             </td>
         </tr>
@@ -85,8 +82,7 @@
                 @Html.SmartLabelFor(model => model.MaximumShoppingCartItems)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.MaximumShoppingCartItems, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.MaximumShoppingCartItems)
+                @Html.SettingEditorFor(model => model.MaximumShoppingCartItems)
                 @Html.ValidationMessageFor(model => model.MaximumShoppingCartItems)
             </td>
         </tr>
@@ -95,8 +91,7 @@
                 @Html.SmartLabelFor(model => model.MaximumWishlistItems)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.MaximumWishlistItems, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.MaximumWishlistItems)
+                @Html.SettingEditorFor(model => model.MaximumWishlistItems)
                 @Html.ValidationMessageFor(model => model.MaximumWishlistItems)
             </td>
         </tr>
@@ -105,8 +100,7 @@
                 @Html.SmartLabelFor(model => model.ShowProductImagesOnShoppingCart)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ShowProductImagesOnShoppingCart, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ShowProductImagesOnShoppingCart)
+                @Html.SettingEditorFor(model => model.ShowProductImagesOnShoppingCart)
                 @Html.ValidationMessageFor(model => model.ShowProductImagesOnShoppingCart)
             </td>
         </tr>
@@ -115,8 +109,7 @@
                 @Html.SmartLabelFor(model => model.ShowProductImagesOnWishList)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ShowProductImagesOnWishList, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ShowProductImagesOnWishList)
+                @Html.SettingEditorFor(model => model.ShowProductImagesOnWishList)
                 @Html.ValidationMessageFor(model => model.ShowProductImagesOnWishList)
             </td>
         </tr>
@@ -125,8 +118,7 @@
                 @Html.SmartLabelFor(model => model.ShowDiscountBox)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ShowDiscountBox, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ShowDiscountBox)
+                @Html.SettingEditorFor(model => model.ShowDiscountBox)
                 @Html.ValidationMessageFor(model => model.ShowDiscountBox)
             </td>
         </tr>
@@ -135,8 +127,7 @@
                 @Html.SmartLabelFor(model => model.ShowGiftCardBox)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ShowGiftCardBox, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ShowGiftCardBox)
+                @Html.SettingEditorFor(model => model.ShowGiftCardBox)
                 @Html.ValidationMessageFor(model => model.ShowGiftCardBox)
             </td>
         </tr>
@@ -145,8 +136,7 @@
                 @Html.SmartLabelFor(model => model.CrossSellsNumber)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.CrossSellsNumber, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.CrossSellsNumber)
+                @Html.SettingEditorFor(model => model.CrossSellsNumber)
                 @Html.ValidationMessageFor(model => model.CrossSellsNumber)
             </td>
         </tr>
@@ -155,8 +145,7 @@
                 @Html.SmartLabelFor(model => model.EmailWishlistEnabled)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.EmailWishlistEnabled, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.EmailWishlistEnabled)
+                @Html.SettingEditorFor(model => model.EmailWishlistEnabled)
                 @Html.ValidationMessageFor(model => model.EmailWishlistEnabled)
             </td>
         </tr>
@@ -165,8 +154,7 @@
                 @Html.SmartLabelFor(model => model.AllowAnonymousUsersToEmailWishlist)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.AllowAnonymousUsersToEmailWishlist, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.AllowAnonymousUsersToEmailWishlist)
+                @Html.SettingEditorFor(model => model.AllowAnonymousUsersToEmailWishlist)
                 @Html.ValidationMessageFor(model => model.AllowAnonymousUsersToEmailWishlist)
             </td>
         </tr>        
@@ -175,8 +163,7 @@
                 @Html.SmartLabelFor(model => model.MiniShoppingCartEnabled)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.MiniShoppingCartEnabled, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.MiniShoppingCartEnabled)
+                @Html.SettingEditorFor(model => model.MiniShoppingCartEnabled)
                 @Html.ValidationMessageFor(model => model.MiniShoppingCartEnabled)
             </td>
         </tr>
@@ -185,8 +172,7 @@
                 @Html.SmartLabelFor(model => model.MiniShoppingCartProductNumber)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.MiniShoppingCartProductNumber, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.MiniShoppingCartProductNumber)
+                @Html.SettingEditorFor(model => model.MiniShoppingCartProductNumber)
                 @Html.ValidationMessageFor(model => model.MiniShoppingCartProductNumber)
             </td>
         </tr>
@@ -195,8 +181,7 @@
                 @Html.SmartLabelFor(model => model.ShowProductImagesInMiniShoppingCart)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ShowProductImagesInMiniShoppingCart, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ShowProductImagesInMiniShoppingCart)
+                @Html.SettingEditorFor(model => model.ShowProductImagesInMiniShoppingCart)
                 @Html.ValidationMessageFor(model => model.ShowProductImagesInMiniShoppingCart)
             </td>
         </tr>    
@@ -207,8 +192,7 @@
                 @Html.SmartLabelFor(model => model.ShowConfirmOrderLegalHint)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ShowConfirmOrderLegalHint, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ShowConfirmOrderLegalHint)
+                @Html.SettingEditorFor(model => model.ShowConfirmOrderLegalHint)
                 @Html.ValidationMessageFor(model => model.ShowConfirmOrderLegalHint)
             </td>
         </tr>
