--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Blog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Blog.cshtml
@@ -24,8 +24,7 @@
                 @Html.SmartLabelFor(model => model.Enabled)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.Enabled, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.Enabled)
+                @Html.SettingEditorFor(model => model.Enabled)
                 @Html.ValidationMessageFor(model => model.Enabled)
             </td>
         </tr>
@@ -34,8 +33,7 @@
                 @Html.SmartLabelFor(model => model.PostsPageSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.PostsPageSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.PostsPageSize)
+                @Html.SettingEditorFor(model => model.PostsPageSize)
                 @Html.ValidationMessageFor(model => model.PostsPageSize)
             </td>
         </tr>
@@ -44,8 +42,7 @@
                 @Html.SmartLabelFor(model => model.AllowNotRegisteredUsersToLeaveComments)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.AllowNotRegisteredUsersToLeaveComments, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.AllowNotRegisteredUsersToLeaveComments)
+                @Html.SettingEditorFor(model => model.AllowNotRegisteredUsersToLeaveComments)
                 @Html.ValidationMessageFor(model => model.AllowNotRegisteredUsersToLeaveComments)
             </td>
         </tr>
@@ -54,8 +51,7 @@
                 @Html.SmartLabelFor(model => model.NotifyAboutNewBlogComments)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.NotifyAboutNewBlogComments, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.NotifyAboutNewBlogComments)
+                @Html.SettingEditorFor(model => model.NotifyAboutNewBlogComments)
                 @Html.ValidationMessageFor(model => model.NotifyAboutNewBlogComments)
             </td>
         </tr>
@@ -64,8 +60,7 @@
                 @Html.SmartLabelFor(model => model.NumberOfTags)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.NumberOfTags, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.NumberOfTags)
+                @Html.SettingEditorFor(model => model.NumberOfTags)
                 @Html.ValidationMessageFor(model => model.NumberOfTags)
             </td>
         </tr>
@@ -74,8 +69,7 @@
                 @Html.SmartLabelFor(model => model.ShowHeaderRssUrl)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ShowHeaderRssUrl, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ShowHeaderRssUrl)
+                @Html.SettingEditorFor(model => model.ShowHeaderRssUrl)
                 @Html.ValidationMessageFor(model => model.ShowHeaderRssUrl)
             </td>
         </tr>
