--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Forum.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Forum.cshtml
@@ -23,8 +23,7 @@
                 @Html.SmartLabelFor(model => model.ForumsEnabled)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ForumsEnabled, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ForumsEnabled)
+                @Html.SettingEditorFor(model => model.ForumsEnabled)
                 @Html.ValidationMessageFor(model => model.ForumsEnabled)
             </td>
         </tr>
@@ -33,8 +32,7 @@
                 @Html.SmartLabelFor(model => model.RelativeDateTimeFormattingEnabled)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.RelativeDateTimeFormattingEnabled, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.RelativeDateTimeFormattingEnabled)
+                @Html.SettingEditorFor(model => model.RelativeDateTimeFormattingEnabled)
                 @Html.ValidationMessageFor(model => model.RelativeDateTimeFormattingEnabled)
             </td>
         </tr>
@@ -43,8 +41,7 @@
                 @Html.SmartLabelFor(model => model.ShowCustomersPostCount)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ShowCustomersPostCount, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ShowCustomersPostCount)
+                @Html.SettingEditorFor(model => model.ShowCustomersPostCount)
                 @Html.ValidationMessageFor(model => model.ShowCustomersPostCount)
             </td>
         </tr>
@@ -53,8 +50,7 @@
                 @Html.SmartLabelFor(model => model.AllowGuestsToCreatePosts)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.AllowGuestsToCreatePosts, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.AllowGuestsToCreatePosts)
+                @Html.SettingEditorFor(model => model.AllowGuestsToCreatePosts)
                 @Html.ValidationMessageFor(model => model.AllowGuestsToCreatePosts)
             </td>
         </tr>
@@ -63,8 +59,7 @@
                 @Html.SmartLabelFor(model => model.AllowGuestsToCreateTopics)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.AllowGuestsToCreateTopics, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.AllowGuestsToCreateTopics)
+                @Html.SettingEditorFor(model => model.AllowGuestsToCreateTopics)
                 @Html.ValidationMessageFor(model => model.AllowGuestsToCreateTopics)
             </td>
         </tr>
@@ -73,8 +68,7 @@
                 @Html.SmartLabelFor(model => model.AllowCustomersToEditPosts)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.AllowCustomersToEditPosts, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.AllowCustomersToEditPosts)
+                @Html.SettingEditorFor(model => model.AllowCustomersToEditPosts)
                 @Html.ValidationMessageFor(model => model.AllowCustomersToEditPosts)
             </td>
         </tr>
@@ -83,8 +77,7 @@
                 @Html.SmartLabelFor(model => model.AllowCustomersToDeletePosts)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.AllowCustomersToDeletePosts, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.AllowCustomersToDeletePosts)
+                @Html.SettingEditorFor(model => model.AllowCustomersToDeletePosts)
                 @Html.ValidationMessageFor(model => model.AllowCustomersToDeletePosts)
             </td>
         </tr>
@@ -93,8 +86,7 @@
                 @Html.SmartLabelFor(model => model.AllowCustomersToManageSubscriptions)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.AllowCustomersToManageSubscriptions, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.AllowCustomersToManageSubscriptions)
+                @Html.SettingEditorFor(model => model.AllowCustomersToManageSubscriptions)
                 @Html.ValidationMessageFor(model => model.AllowCustomersToManageSubscriptions)
             </td>
         </tr>
@@ -103,8 +95,7 @@
                 @Html.SmartLabelFor(model => model.TopicsPageSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.TopicsPageSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.TopicsPageSize)
+                @Html.SettingEditorFor(model => model.TopicsPageSize)
                 @Html.ValidationMessageFor(model => model.TopicsPageSize)
             </td>
         </tr>
@@ -113,8 +104,7 @@
                 @Html.SmartLabelFor(model => model.PostsPageSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.PostsPageSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.PostsPageSize)
+                @Html.SettingEditorFor(model => model.PostsPageSize)
                 @Html.ValidationMessageFor(model => model.PostsPageSize)
             </td>
         </tr>
@@ -123,8 +113,7 @@
                 @Html.SmartLabelFor(model => model.SearchResultsPageSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.SearchResultsPageSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.SearchResultsPageSize)
+                @Html.SettingEditorFor(model => model.SearchResultsPageSize)
                 @Html.ValidationMessageFor(model => model.SearchResultsPageSize)
             </td>
         </tr>
@@ -133,7 +122,7 @@
                 @Html.SmartLabelFor(model => model.ForumEditor)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ForumEditor, Model.ActiveStoreScopeConfiguration)
+				@Html.SettingOverrideCheckbox(model => Model.ForumEditor)
                 @Html.DropDownListForEnum(model => model.ForumEditor)
                 @Html.ValidationMessageFor(model => model.ForumEditor)
             </td>
@@ -143,8 +132,7 @@
                 @Html.SmartLabelFor(model => model.SignaturesEnabled)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.SignaturesEnabled, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.SignaturesEnabled)
+                @Html.SettingEditorFor(model => model.SignaturesEnabled)
                 @Html.ValidationMessageFor(model => model.SignaturesEnabled)
             </td>
         </tr>
@@ -158,7 +146,7 @@
                 @Html.SmartLabelFor(model => model.AllowPrivateMessages)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.AllowPrivateMessages, Model.ActiveStoreScopeConfiguration)
+				@Html.SettingOverrideCheckbox(model => Model.AllowPrivateMessages)
                 @Html.EditorFor(model => model.AllowPrivateMessages)
                 @Html.ValidationMessageFor(model => model.AllowPrivateMessages)
             </td>
@@ -168,8 +156,7 @@
                 @Html.SmartLabelFor(model => model.ShowAlertForPM)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ShowAlertForPM, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ShowAlertForPM)
+                @Html.SettingEditorFor(model => model.ShowAlertForPM)
                 @Html.ValidationMessageFor(model => model.ShowAlertForPM)
             </td>
         </tr>
@@ -178,8 +165,7 @@
                 @Html.SmartLabelFor(model => model.NotifyAboutPrivateMessages)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.NotifyAboutPrivateMessages, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.NotifyAboutPrivateMessages)
+                @Html.SettingEditorFor(model => model.NotifyAboutPrivateMessages)
                 @Html.ValidationMessageFor(model => model.NotifyAboutPrivateMessages)
             </td>
         </tr>
@@ -193,8 +179,7 @@
                 @Html.SmartLabelFor(model => model.ForumFeedsEnabled)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ForumFeedsEnabled, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ForumFeedsEnabled)
+                @Html.SettingEditorFor(model => model.ForumFeedsEnabled)
                 @Html.ValidationMessageFor(model => model.ForumFeedsEnabled)
             </td>
         </tr>
@@ -203,8 +188,7 @@
                 @Html.SmartLabelFor(model => model.ForumFeedCount)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ForumFeedCount, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ForumFeedCount)
+                @Html.SettingEditorFor(model => model.ForumFeedCount)
                 @Html.ValidationMessageFor(model => model.ForumFeedCount)
             </td>
         </tr>
@@ -213,8 +197,7 @@
                 @Html.SmartLabelFor(model => model.ActiveDiscussionsFeedEnabled)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ActiveDiscussionsFeedEnabled, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ActiveDiscussionsFeedEnabled)
+                @Html.SettingEditorFor(model => model.ActiveDiscussionsFeedEnabled)
                 @Html.ValidationMessageFor(model => model.ActiveDiscussionsFeedEnabled)
             </td>
         </tr>
@@ -223,8 +206,7 @@
                 @Html.SmartLabelFor(model => model.ActiveDiscussionsFeedCount)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ActiveDiscussionsFeedCount, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ActiveDiscussionsFeedCount)
+                @Html.SettingEditorFor(model => model.ActiveDiscussionsFeedCount)
                 @Html.ValidationMessageFor(model => model.ActiveDiscussionsFeedCount)
             </td>
         </tr>
