--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
@@ -58,8 +58,7 @@
                 @Html.SmartLabelFor(model => model.AvatarPictureSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.AvatarPictureSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.AvatarPictureSize)
+                @Html.SettingEditorFor(model => model.AvatarPictureSize)
                 @Html.ValidationMessageFor(model => model.AvatarPictureSize)
             </td>
         </tr>
@@ -68,8 +67,7 @@
                 @Html.SmartLabelFor(model => model.ProductThumbPictureSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ProductThumbPictureSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ProductThumbPictureSize)
+                @Html.SettingEditorFor(model => model.ProductThumbPictureSize)
                 @Html.ValidationMessageFor(model => model.ProductThumbPictureSize)
             </td>
         </tr>
@@ -78,8 +76,7 @@
                 @Html.SmartLabelFor(model => model.ProductThumbPictureSizeOnProductDetailsPage)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ProductThumbPictureSizeOnProductDetailsPage, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ProductThumbPictureSizeOnProductDetailsPage)
+                @Html.SettingEditorFor(model => model.ProductThumbPictureSizeOnProductDetailsPage)
                 @Html.ValidationMessageFor(model => model.ProductThumbPictureSizeOnProductDetailsPage)
             </td>
         </tr>
@@ -88,8 +85,7 @@
                 @Html.SmartLabelFor(model => model.ProductDetailsPictureSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ProductDetailsPictureSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ProductDetailsPictureSize)
+                @Html.SettingEditorFor(model => model.ProductDetailsPictureSize)
                 @Html.ValidationMessageFor(model => model.ProductDetailsPictureSize)
             </td>
         </tr>
@@ -98,8 +94,7 @@
                 @Html.SmartLabelFor(model => model.DefaultPictureZoomEnabled)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.DefaultPictureZoomEnabled, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.DefaultPictureZoomEnabled)
+                @Html.SettingEditorFor(model => model.DefaultPictureZoomEnabled)
                 @Html.ValidationMessageFor(model => model.DefaultPictureZoomEnabled)
             </td>
         </tr>
@@ -108,7 +103,7 @@
                 @Html.SmartLabelFor(model => model.PictureZoomType)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.PictureZoomType, Model.ActiveStoreScopeConfiguration)
+				@Html.SettingOverrideCheckbox(model => Model.PictureZoomType)
                 @Html.DropDownListFor(model => model.PictureZoomType, Model.AvailablePictureZoomTypes)
                 @Html.ValidationMessageFor(model => model.PictureZoomType)
             </td>
@@ -118,8 +113,7 @@
                 @Html.SmartLabelFor(model => model.ProductVariantPictureSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ProductVariantPictureSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ProductVariantPictureSize)
+                @Html.SettingEditorFor(model => model.ProductVariantPictureSize)
                 @Html.ValidationMessageFor(model => model.ProductVariantPictureSize)
             </td>
         </tr>
@@ -128,8 +122,7 @@
                 @Html.SmartLabelFor(model => model.CategoryThumbPictureSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.CategoryThumbPictureSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.CategoryThumbPictureSize)
+                @Html.SettingEditorFor(model => model.CategoryThumbPictureSize)
                 @Html.ValidationMessageFor(model => model.CategoryThumbPictureSize)
             </td>
         </tr>
@@ -138,8 +131,7 @@
                 @Html.SmartLabelFor(model => model.ManufacturerThumbPictureSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.ManufacturerThumbPictureSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ManufacturerThumbPictureSize)
+                @Html.SettingEditorFor(model => model.ManufacturerThumbPictureSize)
                 @Html.ValidationMessageFor(model => model.ManufacturerThumbPictureSize)
             </td>
         </tr>
@@ -148,8 +140,7 @@
                 @Html.SmartLabelFor(model => model.CartThumbPictureSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.CartThumbPictureSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.CartThumbPictureSize)
+                @Html.SettingEditorFor(model => model.CartThumbPictureSize)
                 @Html.ValidationMessageFor(model => model.CartThumbPictureSize)
             </td>
         </tr>
@@ -158,8 +149,7 @@
                 @Html.SmartLabelFor(model => model.MiniCartThumbPictureSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.MiniCartThumbPictureSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.MiniCartThumbPictureSize)
+                @Html.SettingEditorFor(model => model.MiniCartThumbPictureSize)
                 @Html.ValidationMessageFor(model => model.MiniCartThumbPictureSize)
             </td>
         </tr>
@@ -168,8 +158,7 @@
                 @Html.SmartLabelFor(model => model.MaximumImageSize)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => Model.MaximumImageSize, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.MaximumImageSize)
+                @Html.SettingEditorFor(model => model.MaximumImageSize)
                 @Html.ValidationMessageFor(model => model.MaximumImageSize)
             </td>
         </tr>
