--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Order.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Order.cshtml
@@ -38,8 +38,7 @@
                 @Html.SmartLabelFor(model => model.IsReOrderAllowed)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => model.IsReOrderAllowed, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.IsReOrderAllowed)
+                @Html.SettingEditorFor(model => model.IsReOrderAllowed)
                 @Html.ValidationMessageFor(model => model.IsReOrderAllowed)
             </td>
         </tr>
@@ -48,8 +47,7 @@
                 @Html.SmartLabelFor(model => model.MinOrderSubtotalAmount)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => model.MinOrderSubtotalAmount, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.MinOrderSubtotalAmount)
+                @Html.SettingEditorFor(model => model.MinOrderSubtotalAmount)
                 @Html.ValidationMessageFor(model => model.MinOrderSubtotalAmount) @Model.PrimaryStoreCurrencyCode
             </td>
         </tr>
@@ -58,8 +56,7 @@
                 @Html.SmartLabelFor(model => model.MinOrderTotalAmount)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => model.MinOrderTotalAmount, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.MinOrderTotalAmount)
+                @Html.SettingEditorFor(model => model.MinOrderTotalAmount)
                 @Html.ValidationMessageFor(model => model.MinOrderTotalAmount) @Model.PrimaryStoreCurrencyCode
             </td>
         </tr>
@@ -68,8 +65,7 @@
                 @Html.SmartLabelFor(model => model.AnonymousCheckoutAllowed)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => model.AnonymousCheckoutAllowed, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.AnonymousCheckoutAllowed)
+                @Html.SettingEditorFor(model => model.AnonymousCheckoutAllowed)
                 @Html.ValidationMessageFor(model => model.AnonymousCheckoutAllowed)
             </td>
         </tr>
@@ -78,8 +74,7 @@
                 @Html.SmartLabelFor(model => model.TermsOfServiceEnabled)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => model.TermsOfServiceEnabled, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.TermsOfServiceEnabled)
+                @Html.SettingEditorFor(model => model.TermsOfServiceEnabled)
                 @Html.ValidationMessageFor(model => model.TermsOfServiceEnabled)
             </td>
         </tr>
@@ -88,8 +83,7 @@
                 @Html.SmartLabelFor(model => model.OnePageCheckoutEnabled)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => model.OnePageCheckoutEnabled, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.OnePageCheckoutEnabled)
+                @Html.SettingEditorFor(model => model.OnePageCheckoutEnabled)
                 @Html.ValidationMessageFor(model => model.OnePageCheckoutEnabled)
             </td>
         </tr>
@@ -140,8 +134,7 @@
                 @Html.SmartLabelFor(model => model.ReturnRequestsEnabled)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => model.ReturnRequestsEnabled, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.ReturnRequestsEnabled)
+                @Html.SettingEditorFor(model => model.ReturnRequestsEnabled)
                 @Html.ValidationMessageFor(model => model.ReturnRequestsEnabled)
             </td>
         </tr>
@@ -150,8 +143,7 @@
                 @Html.SmartLabelFor(model => model.NumberOfDaysReturnRequestAvailable)
             </td>
             <td class="adminData">
-				@Html.OverrideStoreCheckboxFor(model => model.NumberOfDaysReturnRequestAvailable, Model.ActiveStoreScopeConfiguration)
-                @Html.EditorFor(model => model.NumberOfDaysReturnRequestAvailable)
+                @Html.SettingEditorFor(model => model.NumberOfDaysReturnRequestAvailable)
                 @Html.ValidationMessageFor(model => model.NumberOfDaysReturnRequestAvailable)
             </td>
         </tr>
