--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/GeneralCommon.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/GeneralCommon.cshtml
@@ -113,8 +113,8 @@
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.StoreInformationSettings.LogoPictureId)
             </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.StoreInformationSettings.LogoPictureId)
+            <td class="adminData" id="store-logo-picture">
+                @Html.SettingEditorFor(model => model.StoreInformationSettings.LogoPictureId, "#store-logo-picture")
                 @Html.ValidationMessageFor(model => model.StoreInformationSettings.LogoPictureId)
             </td>
         </tr>
@@ -364,7 +364,7 @@
                 @Html.SmartLabelFor(model => model.PdfSettings.Enabled)
             </td>
             <td class="adminData">
-                @Html.EditorFor(model => model.PdfSettings.Enabled)
+                @Html.SettingEditorFor(model => model.PdfSettings.Enabled)
                 @Html.ValidationMessageFor(model => model.PdfSettings.Enabled)
             </td>
         </tr>
@@ -373,7 +373,7 @@
                 @Html.SmartLabelFor(model => model.PdfSettings.LetterPageSizeEnabled)
             </td>
             <td class="adminData">
-                @Html.EditorFor(model => model.PdfSettings.LetterPageSizeEnabled)
+                @Html.SettingEditorFor(model => model.PdfSettings.LetterPageSizeEnabled)
                 @Html.ValidationMessageFor(model => model.PdfSettings.LetterPageSizeEnabled)
             </td>
         </tr>        
@@ -381,8 +381,8 @@
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.PdfSettings.LogoPictureId)
             </td>
-            <td class="adminData">
-                @Html.EditorFor(model => model.PdfSettings.LogoPictureId)
+            <td class="adminData" id="pdf-logo-picture">
+                @Html.SettingEditorFor(model => model.PdfSettings.LogoPictureId, "#pdf-logo-picture")
                 @Html.ValidationMessageFor(model => model.PdfSettings.LogoPictureId)
             </td>
         </tr>
