--- a/src/Plugins/Widgets.GoogleAnalytics/Views/WidgetsGoogleAnalytics/Configure.cshtml
+++ b/src/Plugins/Widgets.GoogleAnalytics/Views/WidgetsGoogleAnalytics/Configure.cshtml
@@ -3,7 +3,7 @@
 }
 @model SmartStore.Plugin.Widgets.GoogleAnalytics.Models.ConfigurationModel
 @using SmartStore.Web.Framework;
-	
+@Html.Action("StoreScopeConfiguration", "Setting", new { area = "Admin" })
 @using (Html.BeginForm())
 {
 
@@ -26,7 +26,7 @@
             @Html.SmartLabelFor(model => model.GoogleId)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.GoogleId)
+            @Html.SettingEditorFor(model => model.GoogleId)
             @Html.ValidationMessageFor(model => model.GoogleId)
         </td>
     </tr>
@@ -35,6 +35,7 @@
             @Html.SmartLabelFor(model => model.TrackingScript)
         </td>
         <td class="adminData">
+			@Html.SettingOverrideCheckbox(model => model.TrackingScript);
             @Html.TextAreaFor(model => model.TrackingScript, new { style = "Width: 600px; Height: 200px;" })
             @Html.ValidationMessageFor(model => model.TrackingScript)
         </td>
@@ -44,6 +45,7 @@
 			@Html.SmartLabelFor(model => model.EcommerceScript)
 		</td>
 		<td class="adminData">
+			@Html.SettingOverrideCheckbox(model => model.EcommerceScript)
 			@Html.TextAreaFor(model => model.EcommerceScript, new { style = "Width: 600px; Height: 50px;" })
 			@Html.ValidationMessageFor(model => model.EcommerceScript)
 		</td>
@@ -53,6 +55,7 @@
 			@Html.SmartLabelFor(model => model.EcommerceDetailScript)
 		</td>
 		<td class="adminData">
+			@Html.SettingOverrideCheckbox(model => model.EcommerceDetailScript)
 			@Html.TextAreaFor(model => model.EcommerceDetailScript, new { style = "Width: 600px; Height: 50px;" })
 			@Html.ValidationMessageFor(model => model.EcommerceDetailScript)
 		</td>
