--- a/src/Presentation/SmartStore.Web/Administration/Views/Blog/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Blog/List.cshtml
@@ -1,5 +1,4 @@
-﻿@model Telerik.Web.Mvc.GridModel<BlogPostModel>
-@using Telerik.Web.Mvc.UI
+﻿@using Telerik.Web.Mvc.UI
 
 @{
     var gridPageSize = EngineContext.Current.Resolve<SmartStore.Core.Domain.Common.AdminAreaSettings>().GridPageSize;
@@ -21,7 +20,6 @@
         <td>
             @(Html.Telerik().Grid<BlogPostModel>()
                     .Name("blogpost-grid")
-                    .BindTo(Model.Data)
                     .Columns(columns =>
                     {
                         columns.Bound(x => x.Title)
@@ -50,7 +48,7 @@
                             .HeaderTemplate(T("Admin.Common.Edit").Text)
                             .Filterable(false);
                     })
-                    .Pageable(settings => settings.Total(Model.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
+                    .Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "Blog"))
                     .EnableCustomBinding(true))
         </td>
