--- a/src/Presentation/SmartStore.Web/Administration/Views/ProductVariant/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ProductVariant/_CreateOrUpdate.cshtml
@@ -40,14 +40,13 @@
 						.Delete("TierPriceDelete", "ProductVariant");
 				})
 				.Columns(columns => {
+					columns.Bound(x => x.Store)
+						 .Centered();
 					columns.Bound(x => x.CustomerRole)
-						.Width(400)
 						.Centered();
 					columns.Bound(x => x.Quantity)
-						.Width(200)
 						.Centered();
 					columns.Bound(x => x.Price1)
-						.Width(100)
                         .Format("{0:G29}");
 					columns.Command(commands => {
 						commands.Edit().Localize(T);
