--- a/src/Plugins/Shipping.ByWeight/Views/ShippingByWeight/Configure.cshtml
+++ b/src/Plugins/Shipping.ByWeight/Views/ShippingByWeight/Configure.cshtml
@@ -14,6 +14,7 @@
                     .DataKeys(keys => keys.Add(x => x.Id).RouteKey("Id"))
                     .Columns(columns =>
                     {
+						columns.Bound(x => x.StoreName).ReadOnly();
                         columns.Bound(x => x.CountryName).Width(200).ReadOnly();
                         columns.Bound(x => x.ShippingMethodName).Width(200).ReadOnly();
                         columns.Bound(x => x.From).Width(100);
@@ -74,6 +75,15 @@
                 <b>@T("Plugins.Shipping.ByWeight.AddRecord.Hint")</b>
             </td>
         </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.AddStoreId):
+			</td>
+			<td class="adminData">
+				@Html.DropDownListFor(model => model.AddStoreId, Model.AvailableStores)
+				@Html.ValidationMessageFor(model => model.AddStoreId)
+			</td>
+		</tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.AddCountryId)
