Resolve issue #11 - Made slide behaviour for content slider background configurable

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/slider.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/slider.less
@@ -56,10 +56,9 @@ Aside from these comments, you may modify and distribute this file as you please
 @navOutlineColor:			contrast(@sliderBackgroundColor);
 
 .slider {
-	//background: url("images/slider/darkfabric.jpg") repeat-x 0 0;
 	background-color: @sliderBackgroundColor;
 	background-repeat: repeat;
-	backgrount-position: 0 50%;
+	background-position: 0 50%;
 	display: block;
 	height: @sliderHeight;
 	margin: 0;
