--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Views/Shared/ConfigureTheme.cshtml
@@ -157,6 +157,7 @@
 {
     <table class="adminContent">
         @ThemeVarEditor("SliderUseRadialBg")
+        @ThemeVarEditor("SliderBgSlide")
         @ThemeVarEditor("SliderBackgroundColor")
         @ThemeVarEditor("SliderTitleColor")
         @ThemeVarEditor("SliderTitleFontFamily")
