--- a/src/Plugins/Payments.PayPalDirect/Views/PaymentPayPalDirect/Configure.cshtml
+++ b/src/Plugins/Payments.PayPalDirect/Views/PaymentPayPalDirect/Configure.cshtml
@@ -4,6 +4,7 @@
 @model ConfigurationModel
 @using SmartStore.Plugin.Payments.PayPalDirect.Models;
 @using SmartStore.Web.Framework;
+@Html.Action("StoreScopeConfiguration", "Setting", new { area = "Admin" })
 @using (Html.BeginForm())
 {
     <table class="adminContent">
@@ -24,10 +25,11 @@
     </tr>
     <tr>
         <td class="adminTitle">
-            @Html.SmartLabelFor(model => model.TransactModeValues)
+            @Html.SmartLabelFor(model => model.TransactMode)
         </td>
         <td class="adminData">
-            @Html.DropDownList("TransactModeId", Model.TransactModeValues)
+			@Html.SettingOverrideCheckbox(model => model.TransactMode)
+            @Html.DropDownList("TransactMode", Model.TransactModeValues)
         </td>
     </tr>
     <tr>
@@ -35,7 +37,7 @@
             @Html.SmartLabelFor(model => model.UseSandbox)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.UseSandbox)
+            @Html.SettingEditorFor(model => model.UseSandbox)
             @Html.ValidationMessageFor(model => model.UseSandbox)
         </td>
     </tr>
@@ -44,7 +46,7 @@
             @Html.SmartLabelFor(model => model.ApiAccountName)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.ApiAccountName)
+            @Html.SettingEditorFor(model => model.ApiAccountName)
             @Html.ValidationMessageFor(model => model.ApiAccountName)
         </td>
     </tr>
@@ -53,7 +55,7 @@
             @Html.SmartLabelFor(model => model.ApiAccountPassword)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.ApiAccountPassword)
+            @Html.SettingEditorFor(model => model.ApiAccountPassword)
             @Html.ValidationMessageFor(model => model.ApiAccountPassword)
         </td>
     </tr>
@@ -62,7 +64,7 @@
             @Html.SmartLabelFor(model => model.Signature)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.Signature)
+            @Html.SettingEditorFor(model => model.Signature)
             @Html.ValidationMessageFor(model => model.Signature)
         </td>
     </tr>
@@ -71,7 +73,7 @@
             @Html.SmartLabelFor(model => model.AdditionalFee)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.AdditionalFee)
+            @Html.SettingEditorFor(model => model.AdditionalFee)
             @Html.ValidationMessageFor(model => model.AdditionalFee)
         </td>
     </tr>
@@ -80,7 +82,7 @@
             @Html.SmartLabelFor(model => model.AdditionalFeePercentage)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.AdditionalFeePercentage)
+            @Html.SettingEditorFor(model => model.AdditionalFeePercentage)
             @Html.ValidationMessageFor(model => model.AdditionalFeePercentage)
         </td>
     </tr>
